fix the dark mode button for real this time

--- a/final/style/darkmode.css
+++ b/final/style/darkmode.css
@@ -10,6 +10,5 @@
     text-decoration: none;
     height: 30px;
     position: absolute;
-    left:8%;
-    top:13%
+    top: 80px;
 }
